--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,17 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
     implementation 'com.squareup.moshi:moshi:1.12.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
+    implementation 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    debugImplementation 'com.facebook.flipper:flipper:0.127.0'
+    debugImplementation 'com.facebook.soloader:soloader:0.10.1'
 }
